--- a/.github/workflows/hifinisign.yml
+++ b/.github/workflows/hifinisign.yml
@@ -1,7 +1,7 @@
 name: hifini-sign
 on:
-  schedule:
-    - cron: 11 22 * * *
+  # schedule:
+    # - cron: 11 22 * * *
   workflow_dispatch:
 jobs:
   build:
